control-kltn/base/cis_policies_v1.10.0/templates/cis-resources-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: resources
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
spec:
  crd:
    spec:
      names:
        kind: Resources
      validation:
        openAPIV3Schema:
          properties: {}
          type: object
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: "package resources\n\nviolation[{\"msg\": msg, \"details\": {\"missing\"\
      : missing}}] {\n  target := input.review.object\n  kinds := [\"Pod\", \"Deployment\"\
      , \"StatefulSet\", \"DaemonSet\"]\n  not contains(kinds, target.kind)\n  container\
      \ := object.get(target.spec, \"containers\", [])\n  initContainer := object.get(target.spec,\
      \ \"initContainers\", [])\n  allContainers := array.concat(container, initContainer)\n\
      \  not is_valid(allContainers, missing)\n  msg := sprintf(\"Container '%v' is\
      \ missing resource requests and limits for CPU and memory\", [missing])\n}\n\
      \nis_valid(containers, missing) {\n  some i\n  container := containers[i]\n\
      \  missing := container.name\n  not has_resource_limits(container)\n}\n\nhas_resource_limits(container)\
      \ {\n  req := object.get(container, \"resources.requests\", {})\n  lim := object.get(container,\
      \ \"resources.limits\", {})\n\n  req.cpu != null\n  req.memory != null\n  lim.cpu\
      \ != null\n  lim.memory != null\n}\n"
